# image-flex

./: docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  Makefile  pyproject.toml  settings.toml
backend/src/: main.py
backend/src/api/: images.py  slack.py
backend/src/models/: schemas.py
backend/src/services/: db_service.py  mqtt_service.py  slack_service.py
components/: CameraCapture.tsx
components/interfaces/: ImageSender.ts
frontend/components/: CameraCapture.tsx
frontend/components/interfaces/: ImageSender.ts
pages/: index.tsx
