[tool.poetry]
name = "image-flex-backend"
version = "0.1.0"
description = "Backend"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "3.2.0"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
attrs = "^23.1.0"
databases = "^0.7.0"
paho-mqtt = "^1.6.1"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
python-multipart = "^0.0.6"
slack-sdk = "^3.21.3"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.282"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N"]
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
